# flowersegmodelprediction

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
flowersegmodelprediction/dataset/: make_dataset.py
flowersegmodelprediction/features/: build_features.py
flowersegmodelprediction/models/: deep_api.py
flowersegmodelprediction/tests/: test_unit_model.py
flowersegmodelprediction/visualization/: visualize.py
notebooks/: 1.0-flowersegmodelprediction_start.ipynb
