# -*- coding: utf-8 -*-
[metadata]
name = flowersegmodelprediction
summary = Trained segmentation model for flowering apple tree pictures
description-file =
    README.md
author = hereariim
author-email = herearii.metuarea@gmail.com
version = 0.0.1
license = No license file
home-page = https://github.com/hereariim/flowersegmodelprediction
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    flowersegmodelprediction

[entry_points]

deepaas.v2.model = 
    flowersegmodelprediction = flowersegmodelprediction.models.deep_api

